# wujihandros2

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  README_EN.md  build_deb.sh  env.sh  foxglove_layout_hand_1.json  foxglove_layout_single_finger.json
.claude/: ralph-loop.local.md
.github/: docs-sync-public-packages.txt
.github/scripts/docs-followup/: docs-followup-comment.sh  docs-followup-prompt.sh  feishu-dm.sh  feishu-sign.sh  force-followup-discover.sh  public-packages-discover.sh
.github/workflows/: auto-release-on-pr.yml  auto-release.yml  ci.yml  docs-followup-callback.yml  docs-followup.yml  notify-docs-preview.yml  notify-docs.yml  release.yml
docs/: API.md  DESIGN.md  DEVELOPMENT.md  TROUBLESHOOTING.md  refactor-plan.md
docs/en/: index.mdx  meta.json  quick-start.mdx  ros2-interface.mdx
docs/en/ros2-user-guide/: installation.mdx  quick-start.mdx  ros2-interface.mdx
docs/zh/: configuration.mdx  meta.json
docs/zh/ros2-user-guide/: installation.mdx  quick-start.mdx  ros2-interface.mdx
tactile_viz/: CMakeLists.txt  README.md  package.xml
tactile_viz/config/: point_positions.yaml
tactile_viz/docs/: log_data_specification.md
tactile_viz/launch/: tactile_viz_foxglove.launch.py
tactile_viz/src/: tactile_stats_node.cpp  tactile_viz_node.cpp
wujihand_bringup/: CMakeLists.txt  package.xml
wujihand_bringup/launch/: common.py  home.launch.py  tactile.launch.py  wujihand.launch.py  wujihand_dual.launch.py  wujihand_foxglove.launch.py  wujihand_full.launch.py  wujihand_mock.launch.py  wujihand_rviz.launch.py
wujihand_bringup/rviz/: left_tactile.rviz  right_tactile.rviz  tactile_overlay.txt
wujihand_bringup/scripts/: home.py  mock_driver.py  wave_demo.py
wujihand_description/rviz/: robot_display.rviz
wujihand_description/urdf/: left.urdf.xacro  right.urdf.xacro
wujihand_driver/: CMakeLists.txt  package.xml
wujihand_driver/include/wujihand_driver/: colormap.hpp  tactile_driver_node.hpp  wujihand_driver_node.hpp
wujihand_driver/src/: list_serial_numbers.cpp  tactile_driver_main.cpp  tactile_driver_node.cpp  tactile_main.cpp  wujihand_driver_main.cpp  wujihand_driver_node.cpp
wujihand_msgs/: CMakeLists.txt  package.xml
wujihand_msgs/msg/: HandDiagnostics.msg  TactileDeviceInfo.msg  TactileFrame.msg
wujihand_tactile_driver/: CMakeLists.txt  package.xml
wujihand_tactile_driver/include/wujihand_tactile_driver/: colormap.hpp  tactile_driver_node.hpp
wujihand_tactile_driver/src/: main.cpp  tactile_driver_node.cpp
wujihand_tactile_msgs/: CMakeLists.txt  package.xml
wujihand_tactile_msgs/msg/: TactileDiagnostics.msg  TactileFrame.msg
wujihand_tactile_msgs/srv/: ResetTactileCounters.srv  SetTactileSampleRate.srv
wujihand_ws/install/wujihand_msgs/include/wujihand_msgs/wujihand_msgs/srv/detail/: set_enabled__type_support.c
wujihand_ws/log/: latest_build
wujihand_ws/src/wujihand/wujihand_driver/: CMakeLists.txt  LICENSE
