<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wujihand_bringup</name>
  <version>1.0.1</version>
  <description>Launch and configuration files for WujiHand</description>
  <maintainer email="support@wuji.com">WujiHand</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>wujihand_driver</exec_depend>
  <exec_depend>wuji_hand_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
